# chessie

./: CMakeLists.txt  README.md  chessengine.cpp  chessengine.hpp  game_state.txt  main  main.cpp  movegenerator.cpp  movegenerator.hpp  movevalidator.cpp  movevalidator.hpp
docs/: README.md  specification.md
src/: chessengine.cpp  chessengine.hpp  main.cpp  moveexecutor.cpp  moveexecutor.hpp  movegenerator.cpp  movegenerator.hpp  movevalidator.cpp  movevalidator.hpp  utils.cpp  utils.hpp
test/: functional_tests.cpp  performance_tests.cpp  unit_tests.cpp
